add_executable(timer2 timer2/timer.cc)
target_link_libraries(timer2 ryan_network)

add_executable(timer3 timer3/timer.cc)
target_link_libraries(timer3 ryan_network)

add_executable(timer4 timer4/timer.cc)
target_link_libraries(timer4 ryan_network)

add_executable(timer5 timer5/timer.cc)
target_link_libraries(timer5 ryan_network)

add_executable(timer6 timer6/timer.cc)
target_link_libraries(timer6 ryan_network)

