add_executable(twisted_finger01 finger01.cc)
target_link_libraries(twisted_finger01 ryan_network)

add_executable(twisted_finger02 finger02.cc)
target_link_libraries(twisted_finger02 ryan_network)

add_executable(twisted_finger03 finger03.cc)
target_link_libraries(twisted_finger03 ryan_network)

add_executable(twisted_finger04 finger04.cc)
target_link_libraries(twisted_finger04 ryan_network)

add_executable(twisted_finger05 finger05.cc)
target_link_libraries(twisted_finger05 ryan_network)

add_executable(twisted_finger06 finger06.cc)
target_link_libraries(twisted_finger06 ryan_network)

add_executable(twisted_finger07 finger07.cc)
target_link_libraries(twisted_finger07 ryan_network)

